<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Swack Customer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Imran Shaikh</string>
    <string name="nav_header_subtitle">imran@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ever">EverOffer</string>
    <string name="website">www.everoffer.in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="otp" tools:ignore="ExtraTranslation">OTP</string>
    <string name="Rs">\u20B9</string>
    <string name="error_msg">Sorry! Couldn\'t fetch list.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="offer_title">Offer Title</string>
    <string name="offer_discount">Offer Discount(%)</string>
    <string name="offer_start_date">Start Date</string>
    <string name="offer_end_date">End Date</string>
    <string name="offer_choose_image">Offer Image</string>
    <string name="sale_card_no">Gift Card No.</string>
    <string name="sale_customer_name">Customer Name</string>
    <string name="sale_actual_price">Total Amount(Rs.)</string>
    <string name="sale_paid_price">Paid Amount(Rs.)</string>
    <string name="offer_title_enter">Enter Offer Title</string>
    <string name="offer_discount_enter">Enter Offer Discount(%)</string>
    <string name="offer_start_date_enter">Enter Start Date</string>
    <string name="offer_end_date_enter">Enter End Date</string>
    <string name="offer_choose_image_enter">Enter Offer Image</string>
    <string name="sale_card_no_enter">Enter Gift Card No.</string>
    <string name="sale_customer_name_enter">Enter Customer Name</string>
    <string name="sale_actual_price_enter">Enter Total Amount(Rs.)</string>
    <string name="sale_paid_price_enter">Enter Paid Amount(Rs.)</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="alt_mobile">Alternate Mobile</string>
    <string name="profile_business">Business Name</string>
    <string name="profile_description">Shop Description</string>
    <string name="profile_address">Official Address</string>
    <string name="profile_pin_code">Pincode</string>
    <string name="profile_image">Profile Photo</string>
    <string name="profile_aadhar">Aadhar Card Photo</string>
    <string name="profile_pan">Pan Card Photo</string>
    <string name="profile_main">Shop Act Photo</string>
    <string name="action_search">Search</string>
    <string name="action_sort_today">Today</string>
    <string name="action_sort_month">Month</string>
    <string name="action_sort_year">Year</string>
    <string name="action_sort_custom">Custom Date</string>
    <string name="action_sort_price_l_h">Price low to high</string>
    <string name="action_sort_price_h_l">Price high to low</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_active">Active</string>
    <string name="action_de_action">Deactive</string>
    <string name="action_add">Add</string>
    <string name="action_notifications">Notification</string>
    <string name="clear">Clear</string>
    <string name="action_edit">Edit</string>
    <string name="contact_email">info@everoffer.in</string>
    <string name="contact_phone">+91-7770096444</string>
    <string name="contact_web">https://everoffer.in/</string>
    <string name="verision">V 1.0</string>
    <string name="add_sale">Add Sale</string>
    <string name="change_password">Change Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_offer">Add Offer</string>
    <string name="menu_myvehical">My Vehicle</string>
    <string name="menu_Drivers">Drivers</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_vehicalinsurance">Vehicle Insurance</string>
    <string name="menu_privacypolicy">Privacy policy</string>
    <string name="menu_orderhistory">Orderlist History</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_newrequest">New Request</string>
    <string name="menu_feedback">Feedback</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="entervalidmobileno">Enter Valid Mobile Number</string>
    <string name="entercpassword">Enter Confirm Password</string>
    <string name="entercpasswordvalidation">Enter Valid Confirm Password</string>
    <string name="enterpasswordvalidation">Enter Valid Password</string>
    <string name="enterconfirmpassword">Enter Confirm Password</string>
    <string name="oldnewpasswordnotmatch">Old and New Password Not Matched..</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email Id</string>
    <string name="loading">Please Wait..</string>
    <string name="registrationdone">Registration  Done Successfully..</string>
    <string name="registrationfail">Registration  Failed..</string>
    <string name="account_block">Account Block</string>
    <string name="enterusername">Enter Username</string>
    <string name="enteraddress">Enter Address</string>
    <string name="enterpassword">Enter Password</string>
    <string name="loginsuccess">Welcome  </string>
    <string name="No">No</string>
    <string name="yes">Yes</string>
    <string name="logout_now">Do you want to logout ?</string>
    <string name="state">Select State</string>
    <string name="invalidmobilenopassword">Invalid Mob and Pass</string>
    <string name="serverdown">Server down</string>
    <string name="userexist">user already exist..please try another mobile number</string>
    <string name="logout_now2">Logout</string>
    <string name="please_wait">Please wait..</string>
    <string name="action_cart">cart</string>
    <string name="search_transport">search name,vehical</string>
    <string name="change_passord">Change Password</string>
    <string name="menu_support">Support</string>
    <string name="menu_changePassword">Change Password</string>
    <string name="select_item">Select Item</string>
    <string name="jobestimate">Quantity</string>
    <string name="jobfinalamt">Job Final Amount</string>
    <string name="menu_request">New Request</string>
    <string name="menu_workshoporder">Breakdown Order</string>
    <string name="menu_transportorder">Transport Order</string>
    <string name="menu_history">Request History</string>
    <string name="menu_callcenter">Call Center</string>
    <string name="submit_bill">Submit Bill</string>
    <string name="no_record_found">No Record Found</string>
    <string name="on_going">Ongoing List</string>
    <string name="from">From District</string>
    <string name="to">To District</string>
    <string name="from_taluka">From Taluka</string>
    <string name="to_taluka">To Taluka</string>
    <string name="from_village">From Village</string>
    <string name="to_village">To Village</string>
    <string name="product_name">Product Name</string>
    <string name="product_unit">Load</string>
    <string name="menu_vehicle">My Vehicle</string>
    <string name="select_type">Select Type</string>
    <string name="select_company">Select Company</string>
    <string name="select_load">Select Load</string>
    <string name="select_modal_years">Select Modal years</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="vehicle_km_reading">Vehicle Km Reading</string>
    <string name="insurance_expired_date">Insurance Expired Date</string>
    <string name="rc_expired_date">RC Expired Date</string>
    <string name="vehicle_photo">Vehicle Photo</string>
    <string name="vehicle_insurance_photo">Vehicle Insurance Photo</string>
    <string name="vehicle_rc_photo">Vehicle RC Photo</string>
    <string name="otp_verification">Enter OTP</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="enter_vehicle">Enter Vehicle</string>
    <string name="enter_service">Enter Service</string>
    <string name="error_msg_login">Invalided Mobile no and Password</string>
    <string name="vehical">    vehical</string>
    <string name="enter_unit">Enter Unit</string>
    <string name="enter_district">Enter District</string>
    <string name="enter_taluka">Enter Taluka</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_to_taluka">Enter To Taluka</string>
    <string name="menu_status">Pending Request</string>
    <string name="useralreadyexist">user already exist</string>
    <string name="you_will_receive_otp">you will get an otp!</string>
    <string name="menu_process">onprocess</string>
    <string name="city">Enter District</string>
    <string name="taluka">Enter Taluka</string>
    <string name="enterstate">Enter State</string>
    <string name="entercity">Enter District</string>
    <string name="entertaluka">Enter Taluka</string>
    <string name="password_wrong">Password Wrong</string>
    <string name="user_does_not_exist">user does not exist</string>
    <string name="menu_ongoing">Ongoing Request</string>
    <string name="hi">"Hi "</string>
    <string name="orders_error">"You have no requests right now. "</string>
    <string name="create_new">Create New Request By Clicking Below Button</string>
    <string name="create_new_breakdown">Create New Request</string>
    <string name="orders_trasnport_error">Create a new transport request by clicking below button</string>
    <string name="pirates">on site</string>
    <string name="ninjas">workshop</string>
    <string name="Support">Call Center</string>
    <string name="contact_address">Address:-</string>
    <string name="app_name_pvt">Swack Solution Pvt Ltd</string>
</resources>
