<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/round_corner">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_corner_red"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        android:text="@string/forgot_password"/>

    <EditText
        android:layout_marginTop="@dimen/_25sdp"
        android:id="@+id/edtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:background="@drawable/round_corner"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="@dimen/_18ssp" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_gravity="center"
        android:background="@drawable/round_corner_red"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="true"
        android:text="@string/submit"/>

</LinearLayout>