<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_below="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/ToolbarColoredBackArrow" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardBackgroundColor="@color/colorWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/profile_image"
                    android:gravity="center_horizontal" />

                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/pic"
                        android:id="@+id/profile_image"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/imageView"
                        android:adjustViewBounds="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_camare"
                        android:contentDescription="@string/app_name"
                        android:layout_gravity="end"
                        android:layout_marginTop="4dp" />
                </FrameLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/profile_name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/profile_name"
                    android:inputType="textCapWords"
                    android:textColor="#000"
                    android:textColorHint="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/profile_email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/profile_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textColorHint="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/mobile"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/profile_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="#000"
                    android:textColorHint="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/profile_address"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/profile_address"
                    android:inputType="textCapWords"
                    android:textColor="#000"
                    android:textColorHint="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/profile_aadhar"
                    android:textColor="@color/black" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner">

                    <ImageView
                        android:id="@+id/profile_aadhar"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/adhar"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/add_aadhar"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="end"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:background="@mipmap/ic_camare"
                        android:contentDescription="@string/app_name" />
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/profile_pan"
                    android:textColor="@color/black" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner">

                    <ImageView
                        android:id="@+id/profile_pan"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/pan"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/add_pan"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="end"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:background="@mipmap/ic_camare"
                        android:contentDescription="@string/app_name" />
                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/fabProfileEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_corner_red"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:text="@string/update_profile"/>

    </LinearLayout>
</ScrollView>


